# src/docs/swagger.yaml
@@ -6,6 +6,17 @@ definitions:
       id:
         type: integer
     type: object
+  github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelImageResponse:
+    properties:
+      carModelId:
+        type: integer
+      id:
+        type: integer
+      image:
+        $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.FileResponse'
+      isMainImage:
+        type: boolean
+    type: object
   github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelPriceHistoryResponse:
     properties:
       carModelYearId:
@@ -101,6 +112,18 @@ definitions:
     required:
     - carModelId
     - colorId
+    type: object
+  github_com_Aliizi83_sample-golang-project_src_api_dto.CreateCarModelImageRequest:
+    properties:
+      carModelId:
+        type: integer
+      imageId:
+        type: integer
+      isMainImage:
+        type: boolean
+    required:
+    - carModelId
+    - imageId
     type: object
   github_com_Aliizi83_sample-golang-project_src_api_dto.CreateCarModelPriceHistoryRequest:
     properties:
@@ -381,6 +404,11 @@ definitions:
       colorId:
         type: integer
     type: object
+  github_com_Aliizi83_sample-golang-project_src_api_dto.UpdateCarModelImageRequest:
+    properties:
+      isMainImage:
+        type: boolean
+    type: object
   github_com_Aliizi83_sample-golang-project_src_api_dto.UpdateCarModelPriceHistoryRequest:
     properties:
       price:
@@ -546,6 +574,25 @@ definitions:
       items:
         items:
           $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelColorResponse'
+        type: array
+      pageNumber:
+        type: integer
+      pageSize:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  ? github_com_Aliizi83_sample-golang-project_src_domain_filters.PagedList-github_com_Aliizi83_sample-golang-project_src_api_dto_CarModelImageResponse
+  : properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelImageResponse'
         type: array
       pageNumber:
         type: integer
@@ -979,6 +1026,157 @@ paths:
       summary: Get CarModelColors
       tags:
       - CarModelColors
+  /v1/car-model-images/:
+    post:
+      consumes:
+      - application/json
+      description: Create a carModelImage
+      parameters:
+      - description: Create a carModelImage
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CreateCarModelImageRequest'
+      responses:
+        "201":
+          description: CarModelImage response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelImageResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a carModelImage
+      tags:
+      - CarModelImages
+  /v1/car-model-images/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a carModelImage
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a carModelImage
+      tags:
+      - CarModelImages
+    get:
+      consumes:
+      - application/json
+      description: Get a carModelImage
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: carModelImage response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelImageResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a carModelImage
+      tags:
+      - CarModelImages
+    put:
+      consumes:
+      - application/json
+      description: Update a carModelImage
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a carModelImage
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.UpdateCarModelImageRequest'
+      responses:
+        "201":
+          description: CarModelImage response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_dto.CarModelImageResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a carModelImage
+      tags:
+      - CarModelImages
+  /v1/car-model-images/get-by-filters:
+    post:
+      consumes:
+      - application/json
+      description: Get CarModelImages
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_domain_filters.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: CarModelImage response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_domain_filters.PagedList-github_com_Aliizi83_sample-golang-project_src_api_dto_CarModelImageResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Aliizi83_sample-golang-project_src_api_helpers.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get CarModelImages
+      tags:
+      - CarModelImages
   /v1/car-model-price-histories/:
     post:
       consumes:
